--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <div id="toolBoxes">
         
     </div>
+    <a href="create.html" class="addBtn material-icons">add</a>
     <script src="js/nav.js"></script>
     <script src="js/index.js"></script>
 </body>
