--- a/create.html
+++ b/create.html
@@ -57,6 +57,7 @@
 
     <script src="js/nav.js"></script>
     <script src="js/createOrEditTodo.js"></script>
+    <script src="js/Create.js"></script>
 </body>
 
 </html>
