add_little_adjustments

--- a/create.html
+++ b/create.html
@@ -51,12 +51,11 @@
                     <input type="text">
                 </div>
             </label>
-            <label><button onclick="createOrEditTodo('create')">Create</button></label>
+            <label><button onclick="create()">Create</button></label>
         </form>
     </div>
 
     <script src="js/nav.js"></script>
-    <script src="js/createOrEditTodo.js"></script>
     <script src="js/Create.js"></script>
 </body>
 
